--- a/css/shop.css
+++ b/css/shop.css
@@ -265,19 +265,12 @@ h2,h3{
 	flex-wrap: wrap;
 }
 
-.category_list{
-	display: block;
-	flex-direction:column;
-	width: 15%;
-}
-
-.category_list .category_item{
+.category_item{
 	display: block;
 	width: 90%;
 	padding: 15px 0;
 	margin-bottom: 20px;
 	background: #c7f5f5;
-
 	text-align: center;
 	text-decoration: none;
 	color: rgb(2, 2, 2);
@@ -290,7 +283,7 @@ h2,h3{
 /* PRODUCTOS ============*/
 
 .products-list{
-	width: 80%;
+	width: 95%;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -306,7 +299,6 @@ h2,h3{
 	flex-direction: column;
 	align-items: center;
 	align-self: flex-start;
-	transition: all .5s;
 }
 
 .products-list .product-item img{
@@ -333,7 +325,6 @@ div button{
     font-family: 'Bebas Neue', cursive;
 	position: relative;
 	border: none;
-	transition: .4s ease-in;
 	z-index: 1;
 }
 
@@ -409,5 +400,21 @@ button::after{
 	}
 
 }
+
+.carrito{
+	height: 35px;
+	width: 40px;
+	margin-bottom: 25px;
+}
+
+p{
+	display: flex;
+	justify-content:end;
+	margin-right: 10px;
+	margin-top: 15px;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	border-bottom:solid;
+}
+
 
 
